- addressing pageflip tutorial content issues left in code review - preventing text wrapping on h1 - preventing widow'd minus sign in tutorial body

--- a/www.html5rocks.com/static/css/base.css
+++ b/www.html5rocks.com/static/css/base.css
@@ -152,7 +152,7 @@ article section h1, article section h2, article section h3 {
 }
 
 h1 {
-  font-size: 200%;
+  font-size: 195%;
 }
 h2 {
   font-size: 150%;
@@ -368,4 +368,8 @@ a[rel='external'] {
   -moz-border-radius: 15px;
   -o-border-radius: 15px;
   border-radius: 15px;
+}
+
+figcaption samp { 
+  white-space: nowrap;
 }
